# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2021-Present The Zarf Authors

[package]
name = "zarf-injector"
edition = "2024"

[dependencies]
flate2 = "1.1.2"
tar = "0.4.40"
sha2 = "0.10.8"
hex = { version = "0.4.3", default-features = false }
serde_json = { version = "1.0.113", default-features = false, features = [
    "alloc",
] }
axum = { version = "0.7.5", features = ["tokio"] }
tokio = { version = "1.43.1", features = ["fs", "rt"] }
tokio-util = { version = "0.7.10", features = ["io"] }
regex-lite = "0.1.5"

[dev-dependencies]
anyhow = "1.0.86"
bollard = "0.19.1"
futures-util = "0.3.30"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true
